study/kky/3.list py log
>>> odd = [1, 3, 5, 7, 9]
>>> a = [1, 2, 3]
>>> a
[1, 2, 3]
>>> a[0]
1
>>> a[0] + a[2]
4
>>> a[-1]
3
>>> a = [1,2,3['a', 'b', 'c']]
<stdin>:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'int' object is not subscriptable
>>> a = [1, 2, 3, ['a', 'b', 'c']]
>>> a[0]
1
>>> a[-1]
['a', 'b', 'c']
>>> a[3]
['a', 'b', 'c']
>>> a[-1][-0]
'a'
>>> a[-1][1]
'b'
>>> a[-1][2]
'c'
>>> a = [1, 2, ['a','b',['Life','is']]]
>>> a[2][2][0]
'Life'
>>> a = [1,2,3,4,5]
>>> a[0:2]
[1, 2]
>>> a = [1,2,3,4,5]
>>> b = a[:2]
>>> c = a[2:]
>>> b
[1, 2]
>>> c
[3, 4, 5]
>>> a = [1,2,3,['a','b','c'],4,5]
>>> a[2:5]
[3, ['a', 'b', 'c'], 4]
>>> a[3][:2]
['a', 'b']
>>> a = [1,2,3]
>>> b = [4,5,6]
>>> a+b
[1, 2, 3, 4, 5, 6]
>>> a = [1,2,3]
>>> a83
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a83' is not defined
>>> a*3
[1, 2, 3, 1, 2, 3, 1, 2, 3]
>>> len(a)
3
>>> a = [1,2,3]
>>> len(a)
3
>>> a=[1,2,3,4,5,6,7,8,9]
>>> len(a)
9
>>> a = [1,2,3]
>>> a[2]+"hi"
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> str(a[2]) + "hi"
'3hi'
>>> a = [1,2,3]
>>> a = ["1","2","3"]
>>>
>>> a = [1 2 3]
  File "<stdin>", line 1
    a = [1 2 3]
           ^
SyntaxError: invalid syntax
>>> a = "1 2 3"
>>> a.split()
['1', '2', '3']
>>> a
'1 2 3'
>>> a
'1 2 3'
>>> a = "1 2 3"
>>> a
'1 2 3'
>>> a.split()
['1', '2', '3']
>>> a[1]
' '
>>> a[0]
'1'
>>> int(a[0]) + int(a[2]) + int(a[4])
6
>>> a = [1,2,3]
>>> a[2] = 4
>>> a
[1, 2, 4]
>>> a = [1,2,3]
>>> del a[1]
>>> a
[1, 3]
>>> a = [1,2,3,4,5]
>>> del a[2:]
>>> a
[1, 2]
>>> a = [1,2,3]
>>> a.append(4)
>>> a
[1, 2, 3, 4]
>>> a.append([5,6])
>>> a
[1, 2, 3, 4, [5, 6]]
>>> a = []1,4,2,3]
  File "<stdin>", line 1
    a = []1,4,2,3]
          ^
SyntaxError: invalid syntax
>>> a = [1,3,7,4,6,3,8,2]
>>> a.sort()
>>> a
[1, 2, 3, 3, 4, 6, 7, 8]
>>> a = ['a','f','r','q','u','z','d']
>>> a.sort()
>>> a
['a', 'd', 'f', 'q', 'r', 'u', 'z']
>>> a.reverse()
>>> a
['z', 'u', 'r', 'q', 'f', 'd', 'a']
>>> a = [1,2,3]
>>> a.index(0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 0 is not in list
>>> a.index(3)
2
>>> a.index(1)
0
>>> a = [1,2,3]
>>> a.insert(0,4)
>>> a
[4, 1, 2, 3]
>>> a.insert(3,5)
>>> a
[4, 1, 2, 5, 3]
>>> a = [1,2,3,1,2,3]
>>> a.remove(3)
>>> a
[1, 2, 1, 2, 3]
>>> a = [1,2,3]
>>> a.index(3)
2
>>> a = [1,2,3]
>>> a.insert(0,4)
>>> a
[4, 1, 2, 3]
>>> a.insert(3,5)
>>> a
[4, 1, 2, 5, 3]
>>> a = [1,2,3,1,2,3]
>>> a.remove(3)
>>> a
[1, 2, 1, 2, 3]
>>> a.remove(3)
>>> a
[1, 2, 1, 2]
>>> a = [1,2,3]
>>> a.pop()
3
>>> a
[1, 2]
>>> a
[1, 2]
>>> a = [1,1,1,1,2,2,3,4,5,5]
>>> a.count(1)
4
>>> a.count()2
  File "<stdin>", line 1
    a.count()2
             ^
SyntaxError: invalid syntax
>>> a.count(2)
2
>>> a = [1,2,3]
>>> a.extend([4,5])
>>> a
[1, 2, 3, 4, 5]
>>> b = [6,7]
>>> a.extend(b)
>>> a
[1, 2, 3, 4, 5, 6, 7]
